ändringar till uppgift 1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oskars webbsida</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <p>Hej</p>
+    <img title="chillar" src="photo-1616074995788-aa67e7886d9f.jpg">
+    <img title="stillbild" src="photo-1616088886430-ccd86fef0713.jpg">
+    <img title="monument" src="photo-1616099420526-0c148297aea3.jpg">
+    <img title="frukost" src="photo-1616109748085-7b89c0807927.jpg">
+    <img title="strand" src="photo-1616148398744-ffb19831ccbe.jpg">
+    <br>
+    <img class="förstoring" title="yours" src="photo-1616127055341-649eef2ecea9.jpg">
+    <a href="http://google.se">
+    <img class="förstoring" title="ensam" src="photo-1611728254388-34a1d7133222.jpg">
+    </a>
+    <a href="photo-1616101865881-a2fd0143a9b9.jpg">
+        <img class="förstoring" title="tivoli" src="photo-1616101865881-a2fd0143a9b9.jpg">
+    </a>
 </body>
 </html>
